infra/main-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gke-showcase-admin
---
apiVersion: v1
kind: Service
metadata:
  name: showcase-admin-svc
  namespace: gke-showcase-admin
spec:
  type: LoadBalancer
  selector:
    app: showcase-admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showcase-admin-deployment
  namespace: gke-showcase-admin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: showcase-admin
  template:
    metadata:
      labels:
        app: showcase-admin
    spec:
      serviceAccountName: showcase-admin-sa
      containers:
      - name: showcase-admin
        image: ${REGION}-docker.pkg.dev/${PROJECT_NAME}/${ARTIFACT_REGISTRY_REPO}/showcase-admin:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-storage
          mountPath: /data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: showcase-admin-pvc
